target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: c07934144f5dc65e54b2d8fccfc32c18df9e8a58
    app.quarkus.io/build-timestamp: 2021-08-12 - 00:10:50 +0000
  labels:
    app.kubernetes.io/name: kafkaconn
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: kafkaconn
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kafkaconn
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: c07934144f5dc65e54b2d8fccfc32c18df9e8a58
    app.quarkus.io/build-timestamp: 2021-08-12 - 00:10:50 +0000
  labels:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: kafkaconn
  name: kafkaconn
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.kubernetes.io/name: kafkaconn
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: c07934144f5dc65e54b2d8fccfc32c18df9e8a58
        app.quarkus.io/build-timestamp: 2021-08-12 - 00:10:50 +0000
      labels:
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: kafkaconn
    spec:
      containers:
        - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
          image: administrator/kafkaconn:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: kafkaconn
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      serviceAccount: kafkaconn
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: c07934144f5dc65e54b2d8fccfc32c18df9e8a58
    app.quarkus.io/build-timestamp: 2021-08-12 - 00:10:50 +0000
  labels:
    app.kubernetes.io/name: kafkaconn
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: kafkaconn
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kafkaconn
                port:
                  name: http
            path: /
            pathType: Prefix
