target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: c07934144f5dc65e54b2d8fccfc32c18df9e8a58
    app.quarkus.io/build-timestamp: 2021-08-12 - 00:10:50 +0000
  labels:
    app.kubernetes.io/name: kafkaconn
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: kafkaconn
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kafkaconn
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: c07934144f5dc65e54b2d8fccfc32c18df9e8a58
    app.quarkus.io/build-timestamp: 2021-08-12 - 00:10:50 +0000
  labels:
    app.kubernetes.io/name: kafkaconn
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: kafkaconn
spec:
  replicas: 1
  selector:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: kafkaconn
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: c07934144f5dc65e54b2d8fccfc32c18df9e8a58
        app.quarkus.io/build-timestamp: 2021-08-12 - 00:10:50 +0000
      labels:
        app.kubernetes.io/name: kafkaconn
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
          image: administrator/kafkaconn:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: kafkaconn
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      serviceAccount: kafkaconn
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - kafkaconn
        from:
          kind: ImageStreamTag
          name: kafkaconn:1.0.0-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: c07934144f5dc65e54b2d8fccfc32c18df9e8a58
    app.quarkus.io/build-timestamp: 2021-08-12 - 00:10:50 +0000
  labels:
    app.kubernetes.io/name: kafkaconn
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: kafkaconn
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: kafkaconn
